finish parser & dumper, but parser have some bugs